# gimp-perl

./: .gitignore  AUTHORS  ChangeLog  Changes  Gimp.pm  Gimp.xs  MANIFEST  MANIFEST.SKIP  MESSAGE-OF-DOOM  Makefile.PL  NEWS  Perl-Server  README  README.win32  TODO  aclocal.m4  config.h.in  config.pl  config.pl.in  configure  configure.ac  configure.frag  extra.c  extra.h  extradefs.h  gimp-perl.doap  gimp-perl.h  gimpdoc  gimpenums.c  insenums  makeenums.pl  scm2perl  typemap
Gimp/: ColorDB.pm  Compat.pm  Config.pm.in  Constant.pm  Data.pm  Extension.pm  Feature.pm  Fu.pm  Lib.pm  Lib.xs  Makefile.PL  Module.pm  OO.pod  Pixel.pod  PixelRgn.pod  Pod.pm  Util.pm
Net/: Makefile.PL  Net.pm  Net.xs
UI/: Makefile.PL  UI.pm  UI.xs  basewidget.pm  typemap
examples/: Create_Images  Makefile.PL  PDB  Perl-Console  Perl-Server  README  alpha2color  animate_cells  autosave  autosave2  avi  billboard  blended2  blowinout  border  bricks  burst  centerguide  circular_text  clear_alpha  colorhtml  colourtoalpha  dataurl  dialogtest  ditherize  dots  dust  example-extension  example-extension-no-fu  example-extension-tester  example-fu  example-net  example-no-fu  example-oo  examples.TODO  exceptiontest  fade-alpha  feedback  fire  fit-text  (+56 more)
lib/: Gimp.pm
lib/Gimp/: Constant.pm  Extension.pm  Fu.pm  Lib.pm  Lib.xs  Net.pm  Pod.pm  UI.pm  UI.xs  Util.pm
po/: ChangeLog  POTFILES.in  oc.po
t/: 02-netplugin.t  02-supplied.t  data.t  examples-api.pl  extension.t  gimppod.t  gimpsetup.pl  import.t  load.t  loadlib.t  netplugin.t  pdl.t  perlplugin.t  run.t  supplied.t
utils/: embedxpm  gimpdoc
